fixed styles including

--- a/aboutus.html
+++ b/aboutus.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" type="text/css" href="assets/css/colors/color1.css" id="colors">
     <link rel="shortcut icon" href="assets/img/logo/Thumbnail.png">
-    <title>Fixmo – Smartphone, Tablet & Computer Repair HTML Template</title>
+    <title>H&A – About Us</title>
 </head>
 
 <body class="header-fixed page no-sidebar header-style-1 topbar-style-1 menu-has-search counter-scroll">
