--- a/index.html
+++ b/index.html
@@ -76,6 +76,22 @@
                 </div>
             </div>
         </div>
+
+        <div class="who-we-are">
+            <div class="left-img-col"></div>
+            <div class="right-img-col">
+                <img src="assets/img/logo/logomark-grey.png" alt="logomark-grey" />
+            </div>
+            <div class="text-holder wow fadeInRight">
+                <h3 class="title">WHO WE ARE</h3>
+                <p>H&A Security Solutions, LLC (H&A) is a cybersecurity company that prioritizes building long-term partnerships with our customers and helping them protect their assets. Since our establishment in 2016, we have focused on creating flexible solutions tailored to our customers’ specific needs, enhancing their overall security posture.</p>
+                <div>
+                    <!-- <a href="#" class="btn">Our team <i class="fa fa-long-arrow-right"></i></a> -->
+                    <a href="#" class="btn">Our team <i class="fa fa-arrows-alt"></i></a>
+                    
+                </div>
+            </div>
+        </div>
     </div>
 
     <!-- Javascript -->
