animate css / wow js

--- a/about.html
+++ b/about.html
@@ -84,23 +84,26 @@
 
                 <div class="section-wrap">
                     <div class="description-wrap">
+                        <!-- <div class="themesflat-spacer clearfix" data-desktop="116" data-mobile="60" data-smobile="60"></div> -->
                         <h5 class="subtitle-section">Why Choose Us</h5>
                         <h2 class="title-section">Who is h&a security Solutions?</h2>
-                        <p>
+                        <p class="wrap-box clearfix wow fadeInLeft" data-wow-delay="0ms" data-wow-duration="1500ms">
                             H&A Security Solutions, LLC (H&A) is a cybersecurity company that prioritizes building long-term partnerships with our customers and helping them protect their assets. Since our establishment in 2016, we have focused on creating flexible solutions tailored to our customers’ specific needs, enhancing their overall security posture.
                         </p>
-                        <h5 class="text-subtitle">WHAT WE OFFER</h5>
-                        <p>
+                        <h5 class="text-subtitle clearfix wow fadeInLeft" data-wow-delay="200ms" data-wow-duration="1500ms">WHAT WE OFFER</h5>
+
+                        <div class="themesflat-spacer clearfix" data-desktop="18" data-mobile="30" data-smobile="30"></div>
+                        <p class="wrap-box clearfix wow fadeInLeft" data-wow-delay="400ms" data-wow-duration="1500ms">
                             Rather than offering generic products, we excel in customizing our services to address the unique requirements of each client. Our vendor-agnostic approach allows us to adapt to your organization’s policies and the evolving security landscape. Our aim is to establish an authentic partnership with your organization, equipping you with the necessary tools, services, and support to navigate the dynamic realm of cybersecurity.
                         </p>
                     </div>
 
                     <div class="wrap-border-img">
-                        <div class="wrap-img-top wow fadeInRight" data-wow-delay="0ms" data-wow-duration="1500ms" style="visibility: visible; animation-duration: 1500ms; animation-delay: 0ms; animation-name: fadeInRight;">
+                        <div class="wrap-img-top wow fadeInRight" data-wow-delay="0ms" data-wow-duration="1500ms">
                             <img src="assets/img/about/offer.png" alt="images">
                         </div>
                         <div class="wrap-square"></div>
-                        <div class="wrap-img-bot wow fadeInUp" data-wow-delay="0ms" data-wow-duration="1500ms" style="visibility: visible; animation-duration: 1500ms; animation-delay: 0ms; animation-name: fadeInUp;">
+                        <div class="wrap-img-bot wow fadeInUp" data-wow-delay="0ms">
                             <img src="assets/img/about/offer-2.png" alt="images">
                         </div>
                     </div>
@@ -111,33 +114,28 @@
 
         <section class="row-group-section">
             <div class="container">
-                <h4 class="title-section">
+                <h4 class="title-section title-group wow fadeInDown" data-wow-delay="0ms" data-wow-duration="1500ms">
                     Our success is measured by our ability to protect what matters to you as the threat landscape evolves.
                 </h4>
-                <a href="services.html" class="btn">
+                <a href="services.html" class="btn wow fadeInUp" data-wow-delay="0ms" data-wow-duration="1500ms">
                     GO TO SERVICES
                     <i class="icon fa fa-long-arrow-right" aria-hidden="true"></i>
                 </a>
             </div>
         </section>
 
-        <!--  -->
         <section class="ourteam-section">
-            <div class="container">
-
-                <div class="ourteam-headings">
-                    <h5 class="subtitle-section">Meet Our Team</h5>
-                    <h2 class="title-section">LEADERSHIP</h2>
-                    <p>
-                        Our team at H&A consists of world-class security professionals of which have obtained some of the highest levels of certification within the information security field. This includes one Blue/Red Cyber Guardian, with several others on the path to achieving the GSE – GIAC Security Expert. Our expertise is reflected in the training courses authored by Justin Henderson, one of our co-founders, which focus on SIEM training, tactical analysis, and implementing zero trust security architecture.
-                    </p>
-                </div>
-
+            <div class="ourteam-headings wow fadeInDown " data-wow-delay="0ms" data-wow-duration="1500ms">
+                <h5 class="subtitle-section">Meet Our Team</h5>
+                <h2 class="title-section">LEADERSHIP</h2>
+                <p class="description">
+                    Our team at H&A consists of world-class security professionals of which have obtained some of the highest levels of certification within the information security field. This includes one Blue/Red Cyber Guardian, with several others on the path to achieving the GSE – GIAC Security Expert. Our expertise is reflected in the training courses authored by Justin Henderson, one of our co-founders, which focus on SIEM training, tactical analysis, and implementing zero trust security architecture.
+                </p>
             </div>
 
             <div class="row-ourteam">
 
-                <div class="wrap-member-team wow fadeInUp" data-wow-delay="0ms" data-wow-duration="1500ms" style="visibility: visible; animation-duration: 1500ms; animation-delay: 0ms; animation-name: fadeInUp;">
+                <div class="wrap-member-team wow fadeInUp" data-wow-delay="0ms" data-wow-duration="1500ms">
                     <div class="wrap-img">
                         <img src="assets/img/our-team/justin-henderson.png" alt="Justin Henderson">
                     </div>
@@ -176,7 +174,7 @@
                     </div>
                 </div>
 
-                <div class="wrap-member-team wow fadeInUp" data-wow-delay="200ms" data-wow-duration="1500ms" style="visibility: visible; animation-duration: 1500ms; animation-delay: 200ms; animation-name: fadeInUp;">
+                <div class="wrap-member-team wow fadeInUp" data-wow-delay="200ms" data-wow-duration="1500ms">
                     <div class="wrap-img">
                         <img src="assets/img/our-team/josh-awalt.png" alt="Josh Awalt">
                     </div>
@@ -215,7 +213,7 @@
                     </div>
                 </div>
 
-                <div class="wrap-member-team wow fadeInUp" data-wow-delay="400ms" data-wow-duration="1500ms" style="visibility: visible; animation-duration: 1500ms; animation-delay: 400ms; animation-name: fadeInUp;">
+                <div class="wrap-member-team wow fadeInUp" data-wow-delay="400ms" data-wow-duration="1500ms">
                     <div class="wrap-img">
                         <img src="assets/img/our-team/adam-moore.png" alt="Adam Moore">
                     </div>
@@ -254,7 +252,7 @@
                     </div>
                 </div>
 
-                <div class="wrap-member-team wow fadeInUp" data-wow-delay="600ms" data-wow-duration="1500ms" style="visibility: visible; animation-duration: 1500ms; animation-delay: 600ms; animation-name: fadeInUp;">
+                <div class="wrap-member-team wow fadeInUp" data-wow-delay="600ms" data-wow-duration="1500ms">
                     <div class="wrap-img">
                         <img src="assets/img/our-team/justin-henderson.png" alt="images">
                     </div>
@@ -294,9 +292,133 @@
                 </div>
    
             </div>
-
         </section>
 
+
+            <!-- FOOTER -->
+            <footer class="footer">
+
+                <div class="container">
+                    <div class="wrap-our-footer">
+                        <div class="our-inner">
+                            <a class="icons" href="tel:+1 217-730-3007"><span class="icon-mobile-keyboard"></span></a>
+                            <ul class="list-info">
+                                <li class="title"><a href="tel:+1 217-730-3007">Our Phone</a> </li>
+                                <li class="sub-title"><a href="tel:+1 217-730-3007">+1 217-730-3007</a></li>
+                            </ul>
+                        </div>
+                        <div class="our-inner">
+                            <a class="icons" href="mailto:info@hasecuritysolutions.com"><span class="font-size-33 icon-mail-open"></span></a>
+                            <ul class="list-info">
+                                <li class="title"> <a href="mailto:info@hasecuritysolutions.com">Our Email</a> </li>
+                                <li class="sub-title"><a href="mailto:info@hasecuritysolutions.com">info@hasecuritysolutions.com</a></li>
+                            </ul>
+                        </div>
+                        <div class="our-inner">
+                            <a class="icons" href="contact.html"><span class="icon-location-map"></span></a>
+                            <ul class="list-info">
+                                <li class="title"> <a href="contact.html">Our Address</a> </li>
+                                <li class="sub-title"><a href="contact.html">12178 N 1450th Street Effingham, IL 62401</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <!-- <div class="themesflat-spacer clearfix" data-desktop="37" data-mobile="20" data-smobile="20"></div> -->
+                    <div class="wrap-our-footer">
+
+                        <div class="wrap-about">
+                            <div class="logo-footer">
+                                <a class="title-logo" href="services.html"><img src="assets/img/logo/logo-red.png" class="padr-10 " alt="images">Fixmo</a>
+                                <p class="title-small sub-logo">Lorem ipsum dolor sit amet, consect etuer adipiscing elit, sed diam nonu mmy nibh euis </p>
+                            </div>
+                            <div class="social-footer">
+                                <ul class="list-social">
+                                    <li class="item-social">
+                                        <a href="https://www.facebook.com/"> <span class="icon-facebook"></span></a>
+                                    </li>
+                                    <li class="item-social">
+                                        <a href="https://twitter.com/"> <span class="icon-twitter"></span></a>
+                                    </li>
+                                    <li class="item-social">
+                                        <a href="https://www.google.com/"> <span class="icon-google"></span></a>
+                                    </li>
+                                    <li class="item-social">
+                                        <a href="https://www.linkedin.com/"> <span class="icon-linkedin-square"></span></a>
+                                    </li>
+                                    <li class="item-social">
+                                        <a href="https://www.pinterest.com/"> <span class="icon-pinterest"></span></a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+
+                        <div>
+                            <div class="wrap-heading-footer">
+                                <h2 class="title-heading big font-size-30 text-white">Services</h2>
+                            </div>
+                            <div class="wrap-sub-footer">
+                                <ul class="list-sub">
+                                    <li class="title-sub"><a class="title-small" href="aboutus.html">Conditions</a></li>
+                                    <li class="title-sub"><a class="title-small" href="history.html">Terms of Use</a></li>
+                                    <li class="title-sub"><a class="title-small" href="services.html">Our Services</a></li>
+                                    <li class="title-sub"><a class="title-small" href="blogstandard.html">New Guests List</a></li>
+                                    <li class="title-sub"><a class="title-small" href="team.html">The Team List</a></li>
+                                </ul>
+                            </div>
+                        </div>
+
+                        <div>
+                            <div class="wrap-heading-footer">
+                                <h2 class="title-heading big font-size-30 text-white">Useful Links</h2>
+                            </div>
+                            <div class="wrap-sub-footer">
+                                <ul class="list-sub">
+                                    <li class="title-sub"><a class="title-small" href="aboutus.html">Conditions</a></li>
+                                    <li class="title-sub"><a class="title-small" href="history.html">Terms of Use</a></li>
+                                    <li class="title-sub"><a class="title-small" href="services.html">Our Services</a></li>
+                                    <li class="title-sub"><a class="title-small" href="blogstandard.html">New Guests List</a></li>
+                                    <li class="title-sub"><a class="title-small" href="team.html">The Team List</a></li>
+                                </ul>
+                            </div>
+                        </div>
+
+                        <!-- <div class="wrap-heading-footer">
+                            <h2 class="title-heading big font-size-30 text-white">Subscribe</h2>
+                            <p class="title-small">Get the latest updates via email. Any time you may unsubscribe</p>
+                            <form action="#" method="post" class="form-mailchimp">
+                                <div class="inner-input">
+                                    <input type="email" class="mailchimp" placeholder="Email">
+                                </div>
+                                <div class="inner-button">
+                                    <button type="submit" class=" fixmo-button bg-red btn-mailchimp">Subscribe</button>
+                                </div>
+                            </form>
+                        </div> -->
+
+                    </div>
+                    <!-- <div class="themesflat-spacer clearfix" data-desktop="40" data-mobile="20" data-smobile="20"></div> -->
+
+                    
+                    <div class="wrap-end-footer">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="left-footer-end">
+                                    <p class="title-small"><a href="index.html">© Themesflat &nbsp;2021</a> | All Rights Reserved</p>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="right-footer-end">
+                                    <a class="title-small line" href="history.html">History</a>
+                                    <a class="title-small line" href="pricelist.html">Price</a>
+                                    <a class="title-small line" href="team.html">Team</a>
+                                    <a class="title-small" href="faq.html">Faq</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </footer>
+            <!-- END FOOTER -->
 
 
     </div>
@@ -305,6 +427,7 @@
     <a id="scroll-top"></a>
 
     <!-- Javascript -->
+    <script src="assets/js/wow.min.js"></script>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/main.js"></script>
 
