--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
             <nav>
                 <ul class="social-menu">
                     <li class="item-social">
-                        <a href="https://twitter.com/"><i class="fa fa-brands fa-twitter"></i></a>
+                        <a href="https://twitter.com/"><span class="icon-twitter"></span></a>
+                    </li>
+                    <li class="social-item">
+                        <a href="">youtube</a>
                     </li>
                     <li class="item-social">
-                        <a href="https://youtube.com/"><i class="fa fa-brands fa-youtube-play"></i></a>
-                    </li>
-                    <li class="item-social">
-                        <a href="https://www.linkedin.com/"><i class="fa fa-brands fa-linkedin"></i></a>
+                        <a href="https://www.linkedin.com/"> <span class="icon-linkedin-square"></span></a>
                     </li>
                 </ul>
             </nav>
@@ -65,114 +65,17 @@
 
         <div class="hero">
             <div class="container">
-                <div class="hero-text-wrap">
-                    <p class="sub-title">KEEPING YOUR SYSTEMS SAFE</p>
-                    <h1 class="title">CUSTOM CYBER SECURITY SOLUTIONS</h1>
-                    <p class="text">Our success is measured by our ability to protect what matters to you as the threat landscape evolves.</p>
-                </div>
+                <p>KEEPING YOUR SYSTEMS SAFE</p>
+                <h1>CUSTOM CYBER SECURITY SOLUTIONS</h1>
 
-                <ul class="menu-tab">
-                    <li class="active">
-                        <div class="icon-box">
-                            <div class="thumb data-effect-item">
-                                <img src="assets/img/tab/edr-icon.png" alt="edr-icon" />
-                            </div>
-                            <div class="text-wrap">
-                                <h3 class="title-icon">EXTENDED DETECTION & RESPONSE</h3>
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="icon-box">
-                            <div class="thumb data-effect-item">
-                                <img src="assets/img/tab/msoc-icon.png" alt="msoc-icon" />
-                            </div>
-                            <div class="text-wrap">
-                                <h3 class="title-icon">MANAGED SECURITY OPERATIONS CENTER</h3>
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="icon-box">
-                            <div class="thumb data-effect-item">
-                                <img src="assets/img/tab/mdr-icon.png" alt="mdr-icon" />
-                            </div>
-                            <div class="text-wrap">
-                                <h3 class="title-icon">Managed detection & response</h3>
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="icon-box">
-                            <div class="thumb data-effect-item">
-                                <img src="assets/img/tab/siem-icon.png" alt="siem-icon" />
-                            </div>
-                            <div class="text-wrap">
-                                <h3 class="title-icon">Security information & event management</h3>
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="icon-box">
-                            <div class="thumb data-effect-item">
-                                <img src="assets/img/tab/vm-icon.png" alt="vm-icon" />
-                            </div>
-                            <div class="text-wrap">
-                                <h3 class="title-icon">Vulnerability Management</h3>
-                            </div>
-                        </div>
-                    </li>
-                </ul>
+                <p>Our success is measured by our ability to protect what matters to you as the threat landscape evolves.</p>
 
-                <div class="content-tab">
-                    <div class="content-inner">
-                        <div class="text-col">
-                            <div class="wrap-title">
-                                <div class="hr">
-                                    <hr class="hr-1">
-                                    <hr class="hr-2">
-                                </div>
-                                <h2 class="title-heading big">EXTENDED DETECTION & RESPONSE (XDR)</h2>
-                                <p class="title-small">An advanced security solution that integrates multiple protection technologies to provide a holistic, unified approach towards threat detection, analysis, and response.</p>
-
-                                <div>
-                                    <a href="#" class="btn">MORE ON XDR</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="img-col">
-                            <div class="wrap-img">
-                                <img src="assets/img/tab/tiers.png" alt="tiers" />
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-
-
-
-            </div>
-        </div>
-
-        <div class="who-we-are">
-            <div class="left-img-col"></div>
-            <div class="right-img-col">
-                <img src="assets/img/logo/logomark-grey.png" alt="logomark-grey" />
-            </div>
-            <div class="text-holder wow fadeInRight">
-                <h3 class="title">WHO WE ARE</h3>
-                <p>H&A Security Solutions, LLC (H&A) is a cybersecurity company that prioritizes building long-term partnerships with our customers and helping them protect their assets. Since our establishment in 2016, we have focused on creating flexible solutions tailored to our customers’ specific needs, enhancing their overall security posture.</p>
-                <div class="btn-holder">
-                    <a href="#" class="btn">Our team <i class="icon fa fa-long-arrow-right"></i></a>
+                <div class="tabs">
+                    <div></div>
+                    <div></div>
                 </div>
             </div>
         </div>
-
-        <footer>
-            <div class="container">
-
-            </div>
-        </footer>
     </div>
 
     <!-- Javascript -->
