--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <ul class="menu-tab">
                     <li class="active">
                         <div class="icon-box">
-                            <div class="thumb data-effect-item">
+                            <div class="thumb">
                                 <img src="assets/img/tab/edr-icon.png" alt="edr-icon" />
                             </div>
                             <div class="text-wrap">
@@ -84,7 +84,7 @@
                     </li>
                     <li>
                         <div class="icon-box">
-                            <div class="thumb data-effect-item">
+                            <div class="thumb">
                                 <img src="assets/img/tab/msoc-icon.png" alt="msoc-icon" />
                             </div>
                             <div class="text-wrap">
@@ -94,7 +94,7 @@
                     </li>
                     <li>
                         <div class="icon-box">
-                            <div class="thumb data-effect-item">
+                            <div class="thumb">
                                 <img src="assets/img/tab/mdr-icon.png" alt="mdr-icon" />
                             </div>
                             <div class="text-wrap">
@@ -104,7 +104,7 @@
                     </li>
                     <li>
                         <div class="icon-box">
-                            <div class="thumb data-effect-item">
+                            <div class="thumb">
                                 <img src="assets/img/tab/siem-icon.png" alt="siem-icon" />
                             </div>
                             <div class="text-wrap">
@@ -114,7 +114,7 @@
                     </li>
                     <li>
                         <div class="icon-box">
-                            <div class="thumb data-effect-item">
+                            <div class="thumb">
                                 <img src="assets/img/tab/vm-icon.png" alt="vm-icon" />
                             </div>
                             <div class="text-wrap">
@@ -126,23 +126,118 @@
 
                 <div class="content-tab">
                     <div class="content-inner">
-                        <div class="text-col">
-                            <div class="wrap-title">
-                                <div class="hr">
-                                    <hr class="hr-1">
-                                    <hr class="hr-2">
+                        <div class="content-item active">
+                            <div class="inner-wrap">
+                                <div class="text-col">
+                                    <div class="wrap-title">
+                                        <div class="hr">
+                                            <hr class="hr-1">
+                                            <hr class="hr-2">
+                                        </div>
+                                        <h2 class="title-heading">EXTENDED DETECTION & RESPONSE (XDR)</h2>
+                                        <p class="text">An advanced security solution that integrates multiple protection technologies to provide a holistic, unified approach towards threat detection, analysis, and response.</p>
+                                        <div class="btn-wrap">
+                                            <a href="#" class="btn btn-dark">MORE ON XDR <i class="icon fa fa-long-arrow-right"></i></a>
+                                        </div>
+                                    </div>
                                 </div>
-                                <h2 class="title-heading big">EXTENDED DETECTION & RESPONSE (XDR)</h2>
-                                <p class="title-small">An advanced security solution that integrates multiple protection technologies to provide a holistic, unified approach towards threat detection, analysis, and response.</p>
-
-                                <div>
-                                    <a href="#" class="btn">MORE ON XDR</a>
+                                <div class="img-col">
+                                    <div class="wrap-img">
+                                        <img src="assets/img/tab/tiers.png" alt="tiers" />
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="img-col">
-                            <div class="wrap-img">
-                                <img src="assets/img/tab/tiers.png" alt="tiers" />
+
+                        <div class="content-item">
+                            <div class="inner-wrap">
+                                <div class="text-col">
+                                    <div class="wrap-title">
+                                        <div class="hr">
+                                            <hr class="hr-1">
+                                            <hr class="hr-2">
+                                        </div>
+                                        <h2 class="title-heading">MANAGED SECURITY OPERATIONS CENTER (MSOC)</h2>
+                                        <p class="text">The Managed Security Operation Center is a cybersecurity service designed to ensure round-the-clock protection for your organization.</p>
+                                        <div class="btn-wrap">
+                                            <a href="#" class="btn btn-dark">MORE ON MSOC <i class="icon fa fa-long-arrow-right"></i></a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="img-col">
+                                    <div class="wrap-img">
+                                        <img src="assets/img/tab/msoc.png" alt="msoc" />
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="content-item">
+                            <div class="inner-wrap">
+                                <div class="text-col">
+                                    <div class="wrap-title">
+                                        <div class="hr">
+                                            <hr class="hr-1">
+                                            <hr class="hr-2">
+                                        </div>
+                                        <h2 class="title-heading">MANAGED DETECTION & RESPONSE (MDR)</h2>
+                                        <p class="text">A cybersecurity service that combines technology and human expertise to help organizations detect, analyze, and respond to cybersecurity threats.</p>
+                                        <div class="btn-wrap">
+                                            <a href="#" class="btn btn-dark">MORE ON MDR <i class="icon fa fa-long-arrow-right"></i></a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="img-col">
+                                    <div class="wrap-img">
+                                        <img src="assets/img/tab/mdr.png" alt="mdr" />
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="content-item">
+                            <div class="inner-wrap">
+                                <div class="text-col">
+                                    <div class="wrap-title">
+                                        <div class="hr">
+                                            <hr class="hr-1">
+                                            <hr class="hr-2">
+                                        </div>
+                                        <h2 class="title-heading">SECURITY INFORMATION & EVENT MANAGEMENT (SIEM)</h2>
+                                        <p class="text">A robust cybersecurity solution that fuses advanced technology with human expertise to provide real-time analysis across your organization’s environment.</p>
+                                        <div class="btn-wrap">
+                                            <a href="#" class="btn btn-dark">MORE ON SIEM <i class="icon fa fa-long-arrow-right"></i></a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="img-col">
+                                    <div class="wrap-img">
+                                        <img src="assets/img/tab/siem.png" alt="siem" />
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="content-item small-img">
+                            <div class="inner-wrap">
+                                <div class="text-col">
+                                    <div class="wrap-title">
+                                        <div class="hr">
+                                            <hr class="hr-1">
+                                            <hr class="hr-2">
+                                        </div>
+                                        <h2 class="title-heading">VULNERABILITY MANAGEMENT (VM)</h2>
+                                        <p class="text">A scanning service designed to identify and assess potential security threats in an organization’s IT infrastructure.</p>
+                                        <div class="btn-wrap">
+                                            <a href="#" class="btn btn-dark">MORE ON VM <i class="icon fa fa-long-arrow-right"></i></a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="img-col">
+                                    <div class="wrap-img text-right">
+                                        <img src="assets/img/tab/vm.png" alt="msoc" />
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
