--- a/about.html
+++ b/about.html
@@ -21,8 +21,7 @@
         <div class="loader"></div>
     </div> -->
     
-
-    <div id="wrapper" class="about animsition">
+    <div id="wrapper" class="about">
         <header class="header">
             <div>
                 <a href="/" class="logo">
@@ -116,10 +115,12 @@
                 <h4 class="title-section title-group wow fadeInDown" data-wow-delay="0ms" data-wow-duration="1500ms">
                     Our success is measured by our ability to protect what matters to you as the threat landscape evolves.
                 </h4>
-                <a href="services.html" class="btn wow fadeInUp" data-wow-delay="0ms" data-wow-duration="1500ms">
-                    GO TO SERVICES
-                    <i class="icon fa fa-long-arrow-right" aria-hidden="true"></i>
-                </a>
+                <div class="btn-holder">
+                    <a href="services.html" class="btn wow fadeInUp" data-wow-delay="0ms" data-wow-duration="1500ms">
+                        GO TO SERVICES
+                        <i class="icon fa fa-long-arrow-right" aria-hidden="true"></i>
+                    </a>
+                </div>
             </div>
         </section>
 
