--- a/services.html
+++ b/services.html
@@ -10,20 +10,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-    <title>H&A</title>
+    <link rel="stylesheet" type="text/css" href="assets/css/about.css">
+    <title>H&A Services</title>
 </head>
 
 <body>
-    <!-- Preloader -->
-    <div id="loading-overlay">
-        <div class="loader"></div>
-    </div>
 
-    <div class="wrapper home">
-        <header class="header header-transparent">
+    <!-- Preloader -->
+    <!-- <div id="loading-overlay">
+        <div class="loader"></div>
+    </div> -->
+
+    <div class="wrapper services">
+        <header class="header header-white">
             <div>
                 <a href="/" class="logo">
-                    <img src="assets/img/logo/logo-white.svg" alt="logo">
+                    <img src="assets/img/logo/logo.png" alt="logo">
                 </a>
             </div>
 
@@ -65,201 +67,32 @@
             </div>
         </header>
 
-        <div class="hero">
+        <section class="hero">
+            <div class="wrap-banner-left">
+                <div class="name-page">
+                    <h2 class="hero-title">SERVICES</h2>
+                    <p class="hero-subtitle">
+                        <a class="name title-small space" href="index.html">Home</a>
+                        SERVICES
+                    </p>
+                </div>
+            </div>
+            <div class="wrap-banner-right">
+                <img src="assets/img/services/services-hero.png" alt="hero-images">
+            </div>
+        </section>
+
+
+        <div class="our-goal">
             <div class="container">
-                <div class="hero-text-wrap">
-                    <p class="sub-title">KEEPING YOUR SYSTEMS SAFE</p>
-                    <h1 class="title">CUSTOM CYBER SECURITY SOLUTIONS</h1>
-                    <p class="text">Our success is measured by our ability to protect what matters to you as the threat landscape evolves.</p>
-                </div>
-
-                <ul class="menu-tab">
-                    <li class="active">
-                        <div class="icon-box">
-                            <div class="thumb">
-                                <img src="assets/img/tab/edr-icon.png" alt="edr-icon" />
-                            </div>
-                            <div class="text-wrap">
-                                <h3 class="title-icon">EXTENDED DETECTION & RESPONSE</h3>
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="icon-box">
-                            <div class="thumb">
-                                <img src="assets/img/tab/msoc-icon.png" alt="msoc-icon" />
-                            </div>
-                            <div class="text-wrap">
-                                <h3 class="title-icon">MANAGED SECURITY OPERATIONS CENTER</h3>
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="icon-box">
-                            <div class="thumb">
-                                <img src="assets/img/tab/mdr-icon.png" alt="mdr-icon" />
-                            </div>
-                            <div class="text-wrap">
-                                <h3 class="title-icon">Managed detection & response</h3>
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="icon-box">
-                            <div class="thumb">
-                                <img src="assets/img/tab/siem-icon.png" alt="siem-icon" />
-                            </div>
-                            <div class="text-wrap">
-                                <h3 class="title-icon">Security information & event management</h3>
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="icon-box">
-                            <div class="thumb">
-                                <img src="assets/img/tab/vm-icon.png" alt="vm-icon" />
-                            </div>
-                            <div class="text-wrap">
-                                <h3 class="title-icon">Vulnerability Management</h3>
-                            </div>
-                        </div>
-                    </li>
-                </ul>
-
-                <div class="content-tab">
-                    <div class="content-inner">
-                        <div class="content-item active">
-                            <div class="inner-wrap">
-                                <div class="text-col">
-                                    <div class="wrap-title">
-                                        <div class="hr">
-                                            <hr class="hr-1">
-                                            <hr class="hr-2">
-                                        </div>
-                                        <h2 class="title-heading">EXTENDED DETECTION & RESPONSE (XDR)</h2>
-                                        <p class="text">An advanced security solution that integrates multiple protection technologies to provide a holistic, unified approach towards threat detection, analysis, and response.</p>
-                                        <div class="btn-holder">
-                                            <a href="#" class="btn btn-dark">MORE ON XDR <i class="icon fa fa-long-arrow-right"></i></a>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="img-col">
-                                    <div class="wrap-img">
-                                        <img src="assets/img/tab/tiers.png" alt="tiers" />
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="content-item">
-                            <div class="inner-wrap">
-                                <div class="text-col">
-                                    <div class="wrap-title">
-                                        <div class="hr">
-                                            <hr class="hr-1">
-                                            <hr class="hr-2">
-                                        </div>
-                                        <h2 class="title-heading">MANAGED SECURITY OPERATIONS CENTER (MSOC)</h2>
-                                        <p class="text">The Managed Security Operation Center is a cybersecurity service designed to ensure round-the-clock protection for your organization.</p>
-                                        <div class="btn-holder">
-                                            <a href="#" class="btn btn-dark">MORE ON MSOC <i class="icon fa fa-long-arrow-right"></i></a>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="img-col">
-                                    <div class="wrap-img">
-                                        <img src="assets/img/tab/msoc.png" alt="msoc" />
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="content-item">
-                            <div class="inner-wrap">
-                                <div class="text-col">
-                                    <div class="wrap-title">
-                                        <div class="hr">
-                                            <hr class="hr-1">
-                                            <hr class="hr-2">
-                                        </div>
-                                        <h2 class="title-heading">MANAGED DETECTION & RESPONSE (MDR)</h2>
-                                        <p class="text">A cybersecurity service that combines technology and human expertise to help organizations detect, analyze, and respond to cybersecurity threats.</p>
-                                        <div class="btn-holder">
-                                            <a href="#" class="btn btn-dark">MORE ON MDR <i class="icon fa fa-long-arrow-right"></i></a>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="img-col">
-                                    <div class="wrap-img">
-                                        <img src="assets/img/tab/mdr.png" alt="mdr" />
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="content-item">
-                            <div class="inner-wrap">
-                                <div class="text-col">
-                                    <div class="wrap-title">
-                                        <div class="hr">
-                                            <hr class="hr-1">
-                                            <hr class="hr-2">
-                                        </div>
-                                        <h2 class="title-heading">SECURITY INFORMATION & EVENT MANAGEMENT (SIEM)</h2>
-                                        <p class="text">A robust cybersecurity solution that fuses advanced technology with human expertise to provide real-time analysis across your organization’s environment.</p>
-                                        <div class="btn-holder">
-                                            <a href="#" class="btn btn-dark">MORE ON SIEM <i class="icon fa fa-long-arrow-right"></i></a>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="img-col">
-                                    <div class="wrap-img">
-                                        <img src="assets/img/tab/siem.png" alt="siem" />
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="content-item small-img">
-                            <div class="inner-wrap">
-                                <div class="text-col">
-                                    <div class="wrap-title">
-                                        <div class="hr">
-                                            <hr class="hr-1">
-                                            <hr class="hr-2">
-                                        </div>
-                                        <h2 class="title-heading">VULNERABILITY MANAGEMENT (VM)</h2>
-                                        <p class="text">A scanning service designed to identify and assess potential security threats in an organization’s IT infrastructure.</p>
-                                        <div class="btn-holder">
-                                            <a href="#" class="btn btn-dark">MORE ON VM <i class="icon fa fa-long-arrow-right"></i></a>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="img-col">
-                                    <div class="wrap-img text-right">
-                                        <img src="assets/img/tab/vm.png" alt="msoc" />
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="who-we-are">
-            <div class="left-img-col"></div>
-            <div class="right-img-col">
-                <img src="assets/img/logo/logomark-grey.png" alt="logomark-grey" />
-            </div>
-            <div class="text-holder wow fadeInRight">
-                <h3 class="title">WHO WE ARE</h3>
-                <p>H&A Security Solutions, LLC (H&A) is a cybersecurity company that prioritizes building long-term partnerships with our customers and helping them protect their assets. Since our establishment in 2016, we have focused on creating flexible solutions tailored to our customers’ specific needs, enhancing their overall security posture.</p>
+                <p>Our goal is to be your strategic partner, leveraging our fifteen years of experience in the cybersecurity field to continually improve our service offerings and deliver tangible value.
+                </p>
                 <div class="btn-holder">
-                    <a href="#" class="btn">Our team <i class="icon fa fa-long-arrow-right"></i></a>
+                    <a href="#" class="btn">MEET THE TEAM <i class="icon fa fa-long-arrow-right"></i></a>
                 </div>
             </div>
         </div>
+
 
         <footer class="footer">
             <div class="container">
