about page mobile-v

--- a/about.html
+++ b/about.html
@@ -65,6 +65,19 @@
 
         <section class="hero">
             <div class="wrap-banner-left">
+                <!-- <div class="name-page">
+                    <h2 class="hero-title">About Us</h2>
+                    <p class="hero-subtitle">
+                        <a class="name title-small space" href="index.html">Home</a>
+                         About Us
+                    </p>
+                </div> -->
+                <img src="assets/img/about/hero-bg.png" alt="images">
+            </div>
+            <div class="wrap-banner-right">
+                <img src="assets/img/about/about-hero.png" alt="images">
+            </div>
+            <div class="container hero-container">
                 <div class="name-page">
                     <h2 class="hero-title">About Us</h2>
                     <p class="hero-subtitle">
@@ -72,9 +85,6 @@
                          About Us
                     </p>
                 </div>
-            </div>
-            <div class="wrap-banner-right">
-                <img src="assets/img/about/about-hero.png" alt="images">
             </div>
         </section>
 
@@ -362,10 +372,12 @@
                     <div class="foo-col">
                         <h2 class="title-heading">GET IN TOUCH</h2>
                         <p class="description">If you would like to know more about our services or have any questions, please reach out to us!</p>
-                        <a href="contact.html" class="btn">
-                            CONTACT US
-                            <i class="icon fa fa-long-arrow-right" aria-hidden="true"></i>
-                        </a>
+                        <div class="btn-holder">
+                            <a href="contact.html" class="btn">
+                                CONTACT US
+                                <i class="icon fa fa-long-arrow-right" aria-hidden="true"></i>
+                            </a>
+                        </div>
                     </div>
                 </div>
                 
