--- a/about.html
+++ b/about.html
@@ -17,9 +17,9 @@
 <body>
 
     <!-- Preloader -->
-    <!-- <div id="loading-overlay">
+    <div id="loading-overlay">
         <div class="loader"></div>
-    </div> -->
+    </div>
     
     <div id="wrapper" class="about">
         <header class="header">
@@ -65,13 +65,6 @@
 
         <section class="hero">
             <div class="wrap-banner-left">
-                <!-- <div class="name-page">
-                    <h2 class="hero-title">About Us</h2>
-                    <p class="hero-subtitle">
-                        <a class="name title-small space" href="index.html">Home</a>
-                         About Us
-                    </p>
-                </div> -->
                 <img src="assets/img/about/hero-bg.png" alt="images">
             </div>
             <div class="wrap-banner-right">
@@ -304,10 +297,7 @@
             </div>
         </section>
 
-
-
         <footer class="footer">
-
             <div class="container">
                 <div class="wrap-our-footer our-contact">
                     <div class="our-inner">
@@ -342,7 +332,6 @@
                         </ul>
                     </div>
                 </div>
-
                 <div class="wrap-our-footer">
                     <div class="wrap-about">
                         <div class="logo-footer">
@@ -380,19 +369,15 @@
                         </div>
                     </div>
                 </div>
-                
                 <div class="copyright-wrap">
                     <p class="copyright">&#169;2023 H&A Security Solutions, LLC | All Rights Reserved</p>
-
                     <div class="privacy-terms">
                         <a href="privacy-policy.html">Privacy Policy</a>
                         <a href="terms-conditions.html">Terms & Conditions</a>
                     </div>
                 </div>
             </div>
-
         </footer>
-
     </div>
 
     <!-- /#wrapper -->
@@ -404,5 +389,4 @@
     <script src="assets/js/main.js"></script>
 
 </body>
-
 </html>
