--- a/services.html
+++ b/services.html
@@ -129,7 +129,6 @@
                         </ul>
                     </div>
                 </div>
-
                 <div class="wrap-our-footer">
                     <div class="wrap-about">
                         <div class="logo-footer">
@@ -159,16 +158,16 @@
                     <div class="foo-col">
                         <h2 class="title-heading">GET IN TOUCH</h2>
                         <p class="description">If you would like to know more about our services or have any questions, please reach out to us!</p>
-                        <a href="contact.html" class="btn">
-                            CONTACT US
-                            <i class="icon fa fa-long-arrow-right" aria-hidden="true"></i>
-                        </a>
+                        <div class="btn-holder">
+                            <a href="contact.html" class="btn">
+                                CONTACT US
+                                <i class="icon fa fa-long-arrow-right" aria-hidden="true"></i>
+                            </a>
+                        </div>
                     </div>
                 </div>
-                
                 <div class="copyright-wrap">
                     <p class="copyright">&#169;2023 H&A Security Solutions, LLC | All Rights Reserved</p>
-
                     <div class="privacy-terms">
                         <a href="privacy-policy.html">Privacy Policy</a>
                         <a href="terms-conditions.html">Terms & Conditions</a>
