--- a/services.html
+++ b/services.html
@@ -69,6 +69,12 @@
 
         <section class="hero">
             <div class="wrap-banner-left">
+                <img src="assets/img/about/hero-bg.png" alt="images">
+            </div>
+            <div class="wrap-banner-right">
+                <img src="assets/img/services/services-hero.png" alt="hero-images">
+            </div>
+            <div class="container hero-container">
                 <div class="name-page">
                     <h2 class="hero-title">SERVICES</h2>
                     <p class="hero-subtitle">
@@ -76,9 +82,6 @@
                         SERVICES
                     </p>
                 </div>
-            </div>
-            <div class="wrap-banner-right">
-                <img src="assets/img/services/services-hero.png" alt="hero-images">
             </div>
         </section>
 
