send contact form

--- a/contact.html
+++ b/contact.html
@@ -17,9 +17,9 @@
 <body>
 
     <!-- Preloader -->
-    <!-- <div id="loading-overlay">
+    <div id="loading-overlay">
         <div class="loader"></div>
-    </div> -->
+    </div>
     
     <div id="wrapper" class="contact">
         <header class="header header-white">
