--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                                         <h2 class="title-heading">EXTENDED DETECTION & RESPONSE (XDR)</h2>
                                         <p class="text">An advanced security solution that integrates multiple protection technologies to provide a holistic, unified approach towards threat detection, analysis, and response.</p>
                                         <div class="btn-holder">
-                                            <a href="services.html" class="btn btn-dark">MORE ON XDR <i class="icon fa fa-long-arrow-right"></i></a>
+                                            <a href="services.html#xdr" class="btn btn-dark tab-link">MORE ON XDR <i class="icon fa fa-long-arrow-right"></i></a>
                                         </div>
                                     </div>
                                 </div>
@@ -156,7 +156,7 @@
                                         <h2 class="title-heading">MANAGED SECURITY OPERATIONS CENTER (MSOC)</h2>
                                         <p class="text">The Managed Security Operation Center is a cybersecurity service designed to ensure round-the-clock protection for your organization.</p>
                                         <div class="btn-holder">
-                                            <a href="services.html" class="btn btn-dark">MORE ON MSOC <i class="icon fa fa-long-arrow-right"></i></a>
+                                            <a href="services.html#msoc" class="btn btn-dark tab-link">MORE ON MSOC <i class="icon fa fa-long-arrow-right"></i></a>
                                         </div>
                                     </div>
                                 </div>
@@ -178,7 +178,7 @@
                                         <h2 class="title-heading">MANAGED DETECTION & RESPONSE (MDR)</h2>
                                         <p class="text">A cybersecurity service that combines technology and human expertise to help organizations detect, analyze, and respond to cybersecurity threats.</p>
                                         <div class="btn-holder">
-                                            <a href="services.html" class="btn btn-dark">MORE ON MDR <i class="icon fa fa-long-arrow-right"></i></a>
+                                            <a href="services.html#mdr" class="btn btn-dark tab-link">MORE ON MDR <i class="icon fa fa-long-arrow-right"></i></a>
                                         </div>
                                     </div>
                                 </div>
@@ -200,7 +200,7 @@
                                         <h2 class="title-heading">SECURITY INFORMATION & EVENT MANAGEMENT (SIEM)</h2>
                                         <p class="text">A robust cybersecurity solution that fuses advanced technology with human expertise to provide real-time analysis across your organization’s environment.</p>
                                         <div class="btn-holder">
-                                            <a href="services.html" class="btn btn-dark">MORE ON SIEM <i class="icon fa fa-long-arrow-right"></i></a>
+                                            <a href="services.html#siem" class="btn btn-dark tab-link">MORE ON SIEM <i class="icon fa fa-long-arrow-right"></i></a>
                                         </div>
                                     </div>
                                 </div>
@@ -222,7 +222,7 @@
                                         <h2 class="title-heading">VULNERABILITY MANAGEMENT (VM)</h2>
                                         <p class="text">A scanning service designed to identify and assess potential security threats in an organization’s IT infrastructure.</p>
                                         <div class="btn-holder">
-                                            <a href="services.html" class="btn btn-dark">MORE ON VM <i class="icon fa fa-long-arrow-right"></i></a>
+                                            <a href="services.html#vm" class="btn btn-dark tab-link">MORE ON VM <i class="icon fa fa-long-arrow-right"></i></a>
                                         </div>
                                     </div>
                                 </div>
@@ -257,16 +257,6 @@
                 <div class="wrap-our-footer our-contact">
                     <div class="our-inner wow fadeInUp" data-wow-delay="0ms" data-wow-duration="1500ms">
                         <div class="icon">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="37.001" height="44" viewBox="437.999 8786.238 37.001 44"><path d="M451.44 8825.244c0-2.754 2.27-4.995 5.06-4.995 2.79 0 5.06 2.24 5.06 4.995 0 2.754-2.27 4.995-5.06 4.995-2.79 0-5.06-2.241-5.06-4.995Zm1.975 0c0 1.679 1.384 3.044 3.085 3.044 1.7 0 3.085-1.365 3.085-3.044 0-1.68-1.384-3.046-3.085-3.046s-3.085 1.366-3.085 3.046Zm11.466-11.337c0-2.755 2.27-4.995 5.06-4.995 2.79 0 5.059 2.24 5.059 4.995 0 2.754-2.27 4.995-5.06 4.995-2.789 0-5.059-2.24-5.059-4.995Zm1.975 0c0 1.68 1.384 3.046 3.084 3.046 1.701 0 3.085-1.366 3.085-3.046 0-1.68-1.384-3.045-3.085-3.045-1.7 0-3.084 1.366-3.084 3.045Zm-15.415 0c0-2.755 2.27-4.995 5.059-4.995 2.79 0 5.06 2.24 5.06 4.995 0 2.754-2.27 4.995-5.06 4.995-2.79 0-5.06-2.24-5.06-4.995Zm1.974 0c0 1.68 1.384 3.046 3.085 3.046 1.7 0 3.085-1.366 3.085-3.046 0-1.68-1.384-3.045-3.085-3.045s-3.085 1.366-3.085 3.045Zm-15.416 0c0-2.755 2.27-4.995 5.06-4.995 2.79 0 5.059 2.24 5.059 4.995 0 2.754-2.27 4.995-5.06 4.995-2.79 0-5.059-2.24-5.059-4.995Zm1.976 0c0 1.68 1.383 3.046 3.084 3.046 1.7 0 3.084-1.366 3.084-3.046 0-1.68-1.383-3.045-3.084-3.045s-3.084 1.366-3.084 3.045Zm24.906-11.336c0-2.754 2.27-4.995 5.06-4.995 2.79 0 5.059 2.24 5.059 4.995 0 2.754-2.27 4.996-5.06 4.996-2.789 0-5.059-2.242-5.059-4.996Zm1.975-.001c0 1.68 1.384 3.045 3.084 3.045 1.701 0 3.085-1.365 3.085-3.045 0-1.679-1.384-3.045-3.085-3.045-1.7 0-3.084 1.366-3.084 3.045Zm-15.415 0c0-2.753 2.27-4.994 5.059-4.994 2.79 0 5.06 2.24 5.06 4.995 0 2.754-2.27 4.996-5.06 4.996-2.79 0-5.06-2.242-5.06-4.996Zm1.974 0c0 1.68 1.384 3.045 3.085 3.045 1.7 0 3.085-1.365 3.085-3.045 0-1.679-1.384-3.045-3.085-3.045s-3.085 1.366-3.085 3.045Zm-15.416 0c0-2.753 2.27-4.994 5.06-4.994 2.79 0 5.059 2.24 5.059 4.995 0 2.754-2.27 4.996-5.06 4.996-2.79 0-5.059-2.242-5.059-4.996Zm1.976 0c0 1.68 1.383 3.045 3.084 3.045 1.7 0 3.084-1.365 3.084-3.045 0-1.679-1.383-3.045-3.084-3.045s-3.084 1.366-3.084 3.045Zm24.906-11.336c0-2.755 2.27-4.996 5.06-4.996 2.79 0 5.059 2.241 5.059 4.996 0 2.754-2.27 4.995-5.06 4.995-2.789 0-5.059-2.24-5.059-4.995Zm1.975 0c0 1.68 1.384 3.046 3.084 3.046 1.701 0 3.085-1.366 3.085-3.046 0-1.68-1.384-3.045-3.085-3.045-1.7 0-3.084 1.366-3.084 3.045Zm-15.415 0c0-2.755 2.27-4.996 5.059-4.996 2.79 0 5.06 2.241 5.06 4.996 0 2.754-2.27 4.995-5.06 4.995-2.79 0-5.06-2.24-5.06-4.995Zm1.974 0c0 1.68 1.384 3.046 3.085 3.046 1.7 0 3.085-1.366 3.085-3.046 0-1.68-1.384-3.045-3.085-3.045s-3.085 1.366-3.085 3.045Zm-15.416 0c0-2.755 2.27-4.996 5.06-4.996 2.79 0 5.059 2.241 5.059 4.996 0 2.754-2.27 4.995-5.06 4.995-2.79 0-5.059-2.24-5.059-4.995Zm1.976 0c0 1.68 1.383 3.046 3.084 3.046 1.7 0 3.084-1.366 3.084-3.046 0-1.68-1.383-3.045-3.084-3.045s-3.084 1.366-3.084 3.045Z" fill="#fff" fill-rule="evenodd" data-name="icon"/>
-                            </svg>
-                        </div>
-                        <ul class="list-info">
-                            <li class="title">Our Phone</li>
-                            <li class="sub-title"><a href="tel:+12177303007">+1 217-730-3007</a></li>
-                        </ul>
-                    </div>
-                    <div class="our-inner wow fadeInUp" data-wow-delay="300ms" data-wow-duration="1500ms">
-                        <div class="icon">
                             <svg xmlns="http://www.w3.org/2000/svg" width="36.999" height="34.001" viewBox="832 8786.003 36.999 34.001">
                                 <path d="M832.976 8820.004a.96.96 0 0 1-.67-.273.93.93 0 0 1-.278-.659l-.028-20.201v-.017a.927.927 0 0 1 .41-.754l5.321-3.617v-3.836a.94.94 0 0 1 .948-.932h6.066l5.218-3.546a.956.956 0 0 1 1.08 0l5.184 3.546h6.093a.94.94 0 0 1 .948.932v3.881l5.296 3.62c.19.131.315.316.373.52a.514.514 0 0 1 .033.184l.029 20.17a.94.94 0 0 1-.946.934l-35.077.048Zm2.772-1.869 29.478-.04-14.712-11.223-14.766 11.263Zm-1.827-.965 11.442-8.729-11.466-7.793.024 16.522Zm21.72-8.747 11.46 8.744-.023-16.565-11.438 7.821Zm-16.014-6.148 7.308 4.968 2.997-2.288a.963.963 0 0 1 1.15-.008l.012.008 2.978 2.271 7.3-4.992v-10.656h-21.745v10.697Zm-5.013-3.408 3.117 2.12v-4.238l-3.117 2.118Zm28.654 2.071 3.027-2.07-3.027-2.07v4.14Zm-15.189-11.223h4.829l-2.408-1.646-2.42 1.646Zm-3.995 12.301a.94.94 0 0 1-.947-.931.94.94 0 0 1 .947-.933h12.83a.94.94 0 0 1 .947.933.94.94 0 0 1-.946.931h-12.83Zm0-4.845a.94.94 0 0 1-.947-.933.94.94 0 0 1 .947-.932h12.83a.94.94 0 0 1 .947.932.94.94 0 0 1-.946.933h-12.83Z" fill="#fff" fill-rule="evenodd" data-name="icon"/>
                             </svg>
@@ -276,7 +266,7 @@
                             <li class="sub-title"><a href="mailto:info@hasecuritysolutions.com">info@hasecuritysolutions.com</a></li>
                         </ul>
                     </div>
-                    <div class="our-inner wow fadeInUp" data-wow-delay="600ms" data-wow-duration="1500ms">
+                    <div class="our-inner wow fadeInUp" data-wow-delay="300ms" data-wow-duration="1500ms">
                         <a class="icon" href="contact.html">
                             <svg xmlns="http://www.w3.org/2000/svg" width="31" height="44.001" viewBox="1226 8782.001 31 44.001"><path d="m1240.596 8825.811-6.583-2.916-5.674 2.51a1.656 1.656 0 0 1-1.865-.356 1.633 1.633 0 0 1-.312-1.861l4.994-10.517a1.107 1.107 0 0 1 1.984-.023c.167.331.15.707-.013 1.01l-4.342 9.146 4.32-1.916a2.23 2.23 0 0 1 1.806 0l6.583 2.917h.011l6.585-2.917a2.226 2.226 0 0 1 1.804 0l4.32 1.916-4.343-9.148a1.095 1.095 0 0 1 .175-1.275 1.106 1.106 0 0 1 1.798.29l4.994 10.517c.3.63.177 1.36-.313 1.86s-1.222.64-1.864.357l-5.664-2.51-6.594 2.916a2.233 2.233 0 0 1-1.807 0Zm-1.946-7.6-9.548-15.926a13.891 13.891 0 0 1-1.562-6.474c.022-3.642 1.464-7.082 4.06-9.689a13.908 13.908 0 0 1 9.702-4.12 13.907 13.907 0 0 1 9.999 4 13.766 13.766 0 0 1 4.158 9.894 13.686 13.686 0 0 1-1.563 6.39l-9.547 15.926a3.294 3.294 0 0 1-2.85 1.61 3.296 3.296 0 0 1-2.85-1.61Zm2.683-34.012c-6.35.088-11.548 5.303-11.586 11.625a11.526 11.526 0 0 0 1.269 5.367l9.528 15.895c.293.488.766.54.956.54.19 0 .662-.052.955-.54l9.528-15.895a11.525 11.525 0 0 0 1.27-5.295c0-3.155-1.244-6.113-3.501-8.33a11.693 11.693 0 0 0-8.42-3.367Zm-4.884 11.697c0-2.772 2.265-5.027 5.05-5.027 2.785 0 5.052 2.255 5.052 5.027 0 2.772-2.267 5.027-5.051 5.027-2.786 0-5.05-2.255-5.05-5.027Zm2.206 0a2.842 2.842 0 0 0 2.845 2.832 2.841 2.841 0 0 0 2.844-2.832 2.84 2.84 0 0 0-2.844-2.831 2.841 2.841 0 0 0-2.845 2.831Z" fill="#fff" fill-rule="evenodd" data-name="icon"/>
                             </svg>
